--- a/style.css
+++ b/style.css
@@ -4,3 +4,12 @@ html {
 *, *:before, *:after {
   box-sizing: inherit;
 }
+html, body {
+  min-height: 100vh; /* Make document fill entire viewport by default */
+}
+body {
+  display: flex;
+  flex-direction: column;
+  font-family: 'Roboto', sans-serif;
+  line-height: initial; /* Remove unnecessary spacing at the bottom introduced by css reset stylesheet */
+}
