Add styling to header and its content

--- a/style.css
+++ b/style.css
@@ -13,3 +13,68 @@ body {
   font-family: 'Roboto', sans-serif;
   line-height: initial; /* Remove unnecessary spacing at the bottom introduced by css reset stylesheet */
 }
+#header, #content > *, #footer {
+  padding: 0 100px; /* Side padding */
+}
+#header, #footer {
+  background-color: #1F2937;
+}
+
+/* Header */
+#header {
+  display: flex;
+  flex-direction: column;
+  color: #f9faf8;
+}
+#header a {
+  color: #f9faf8;
+  text-decoration: none;
+}
+#header a.homepage {
+  font-size: 24px;
+  font-weight: 700;
+}
+#header ul {
+  display: flex;
+  gap: 24px;
+}
+#header h1 {
+  font-size: 48px;
+  font-weight: 700;
+}
+#header h3 {
+  color: #e5e7eb;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.1em;
+  padding: 8px 0;
+}
+#header button {
+  background-color: #3882f6;
+  border: none;
+  border-radius: 8px;
+  padding: 8px 32px;
+  font-size:18px;
+  color: white;
+  cursor: pointer;
+}
+#header .navigator {
+  display: flex;
+  justify-content: space-between;
+  font-size: large;
+  padding-top: 24px;
+}
+#header .hero {
+  display: flex;
+  gap: 24px;
+  padding: 100px 0;
+}
+#header .hero > * {
+  flex-basis: 50%;
+}
+#header .hero .image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: grey;
+}
