--- a/style.css
+++ b/style.css
@@ -30,10 +30,6 @@ body {
   color: #f9faf8;
   text-decoration: none;
 }
-#header a.homepage {
-  font-size: 24px;
-  font-weight: 700;
-}
 #header ul {
   display: flex;
   gap: 24px;
@@ -63,6 +59,21 @@ body {
   justify-content: space-between;
   font-size: large;
   padding-top: 24px;
+}
+#header .homepage {
+  font-size: 24px;
+  font-weight: 700;
+  border-radius: 4px;
+  margin-left: -7px;
+  margin-top: -7px;
+  padding: 8px;
+}
+#header .homepage:hover {
+  padding: 5px;
+  border: 3px dashed;
+}
+#header #navbar a:hover {
+  border-bottom: 2px solid;
 }
 #header .hero {
   display: flex;
