--- a/style.css
+++ b/style.css
@@ -46,10 +46,11 @@ body {
   padding: 8px 0;
 }
 #header button {
+  width: 125px;
   background-color: #3882f6;
   border: none;
   border-radius: 8px;
-  padding: 8px 32px;
+  padding: 8px;
   font-size:18px;
   color: white;
   cursor: pointer;
