--- a/style.css
+++ b/style.css
@@ -45,6 +45,12 @@ body {
   line-height: 1.1em;
   padding: 8px 0;
 }
+#header img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  text-align: center;
+}
 #header button {
   width: 125px;
   background-color: #3882f6;
@@ -78,6 +84,7 @@ body {
 }
 #header .hero {
   display: flex;
+  max-height: 430px;
   gap: 24px;
   padding: 100px 0;
 }
@@ -86,9 +93,9 @@ body {
 }
 #header .hero .image {
   display: flex;
+  background-color: grey;
   justify-content: center;
   align-items: center;
-  background-color: grey;
 }
 
 /* Content */
@@ -119,6 +126,8 @@ body {
 }
 #content .team li {
   width: 170px;
+  height: 170px;
+
 }
 #content .team img {
   display: flex;
@@ -126,11 +135,11 @@ body {
   align-items: center;
   /* Top part aligns placeholder text to center*/
   width: 100%;
-  height: auto;
+  height: 100%;
   border: 4px solid #3882f6;
   border-radius: 16px;
   color: #1f2937;
-  aspect-ratio: 1;
+  object-fit: cover;
 }
 #content .team p {
   color: #1f2937;
