--- a/style.css
+++ b/style.css
@@ -125,8 +125,11 @@ body {
   padding-top: 50px;
 }
 #content .team li {
-  width: 170px;
-  height: 170px;
+  width: 100%;
+  height: 100%;
+  max-width: 170px;
+  max-height: 170px;
+  aspect-ratio: 1;
 
 }
 #content .team img {
